# agents-sandbox

./: .gitignore  CLAUDE.md  README.md
.claude/: settings.json
.claude/agents/: code-reviewer.md
.claude/hooks/: safety_checks.sh  trace_tools.sh
.claude/skills/eda-report/: SKILL.md
eeg-embedding-explorer/: .gitignore  CLAUDE.md  README.md  conftest.py  pyproject.toml
eeg-embedding-explorer/.claude/: settings.json
eeg-embedding-explorer/.claude/hooks/: test-gate.sh
eeg-embedding-explorer/docs/: BUILD_SPEC.md  DESIGN.md
eeg-embedding-explorer/src/: app.py
eeg-embedding-explorer/src/eeg_explorer/: __init__.py  adapters.py  cache.py  labels.py  pooling.py  precompute.py  projections.py  registry.py  synthetic.py
eeg-embedding-explorer/tests/: test_app.py  test_cache.py  test_labels.py  test_pooling.py  test_precompute.py  test_projections.py  test_registry.py  test_synthetic.py
eeg-embedding-explorer/weights/: MANIFEST.md
ml-experiment-explorer/: CLAUDE.md  README.md  pyproject.toml
ml-experiment-explorer/reports/: report_2026-04-09.md
ml-experiment-explorer/scripts/: analyze.py  generate_mocks.py
simple-tool-use/: README.md  agent.py  pyproject.toml
